--- a/ethers-simple-storage/package.json
+++ b/ethers-simple-storage/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "deploy.js",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "ethers": "^5.6.8",
     "solc": "0.8.7-fixed"
   },
