--- a/hardhat-simple-storage/package.json
+++ b/hardhat-simple-storage/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "hardhat": "^2.9.9",
+    "hardhat-gas-reporter": "^1.0.8",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
