--- a/hardhat-simple-storage/package.json
+++ b/hardhat-simple-storage/package.json
@@ -14,7 +14,8 @@
     "hardhat": "^2.9.9",
     "hardhat-gas-reporter": "^1.0.8",
     "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.19"
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solidity-coverage": "^0.7.21"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
