--- a/hardhat-smart-contract-lottery/package.json
+++ b/hardhat-smart-contract-lottery/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chainlink/contracts": "^0.4.1",
     "hardhat": "^2.9.9"
   },
   "devDependencies": {
